# www.geeklearngames.com

./: .gitignore  Cargo.toml  README.md  _headers  _redirects  audit_confirmed.txt  index.html  main.css  main.js  robots.txt  script.js  site.webmanifest  sitemap.xml  styles.css  sw.js  tauri.conf.json  wrangler.jsonc
.github/workflows/: build-launcher.yml
css/: fonts.css  glg-aaa.css  glg-premium.css  main.css
db/: schema.sql
js/: app.js  auth.js  config.js  data.js  gate-field.js  glg-animations.js  glg-sfx.js  protection.js
launcher/: README.md
launcher/capabilities/: default.json
launcher/icons/: icon.icns
launcher/src/: lib.rs
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: remote-window.json
launcher/src-tauri/icons/: README.txt
launcher/src-tauri/src/: lib.rs  main.rs  splash.html
tools/: gen-keyart.py
